@@ -3,3 +3,4 @@ SHA256 (misc/iRedAdmin-1.0.tar.bz2) = 84b8eea9472aac3ab6d4cfc914a0277b484f99ec1e
 SHA256 (misc/mlmmjadmin-2.1.tar.gz) = 2d077a993280df0b3b5e42d3acd65129baa530c1166ab2ccaef8e2b3bc68dc5e
 SHA256 (misc/iRedAPD-3.5.tar.gz) = 190dd01742d4e4ccce245203726720487e7fc8be5f3fd33098f12d8b09c24751
 SHA256 (misc/roundcubemail-1.4.3-complete.tar.gz) = 24f250289f961813a222d0cb8e1449dc95b0605334b2fd4d4468ecd96e4e54bf
+SHA256 (misc/fail2ban-0.11.1.tar.gz) = 71d2a52b66bb0f87ac3812246bdd3819ec561913cd44afd39130a342f043aa6d
